# ray-tracing

./: CMakeLists.txt  README.md  build.sh  makefile
src/: color.cpp  color.h  constants.h  hit_record.cpp  hit_record.h  hittable.cpp  hittable.h  hittable_list.cpp  hittable_list.h  interval.cpp  interval.h  main.cpp  ray.cpp  ray.h  sphere.cpp  sphere.h  vec3.cpp  vec3.h
tests/: CMakeLists.txt  vec3_test.cpp
